[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Jochem Klingeler <jochem.klingeler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
]

[dependencies]
day-01 = { path = "./day-01" }
day-02 = { path = "./day-02" }
day-03 = { path = "./day-03" }
day-04 = { path = "./day-04" }
day-05 = { path = "./day-05" }
